--- a/assets/about.css
+++ b/assets/about.css
@@ -6,6 +6,26 @@
 }
 /* End Navbar */
 
+
+/* Cart */
+.cart span, p{
+    font-family: 'Balsamiq Sans', cursive;
+  }
+  
+  .cart {
+    min-width:300px !important;
+  }
+  
+  .containercart button {
+    font-size: 10px !important;
+    box-shadow: 10px 3px #101010;
+    border-color: black !important;
+    border-radius: 10px !important;
+    border-width:  2px !important;
+  }
+  
+  /* end Cart */
+
 /* Jumbotron */
 
 .warptop {
